--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "landing page for natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass":"node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "compress:css": "node-sass css/style.concat.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css compress:css"
   },
   "author": "johnny",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^5.0.0"
-  }
+    "autoprefixer": "^10.0.4",
+    "node-sass": "^5.0.0",
+    "postcss-cli": "^8.3.0"
+  },
+  "dependencies": {}
 }
